syntax = "proto3";

option java_multiple_files = true;
option java_package = "accounts.proto";
option java_outer_classname = "AccountsProto";

package accounts;

service Accounts {
  rpc getAccountById (GetAccountByIdRequest) returns (AccountResponse) {}
  rpc createAccount (CreateAccountRequest) returns (AccountResponse) {}
}

message GetAccountByIdRequest {
  string id = 1;
}

message CreateAccountRequest {
  string name = 2;
  string document = 3;
}

message AccountResponse {
  int64 id = 1;
  string name = 2;
  string document = 3;
}